--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -52,7 +52,7 @@
 
 .wave-emoji {
   animation-duration: 1.8s;
-  animation-iteration-count: infinite;
+  animation-iteration-count: 3;
   animation-name: wave;
   display: inline-block;
   transform-origin: 70% 70%;
